# CHK-ttat01

./: .gitignore  pyproject.toml
lib/solutions/CHK/: checkout_solution.py
lib/solutions/CHK/constants/: __init__.py  const.py
lib/solutions/CHK/utils/: __init__.py  common.py
lib/solutions/HLO/: hello_solution.py
lib/solutions/SUM/: sum_solution.py
test/solution_tests/CHK/: test_checkout_solution.py  test_constants.py  test_utils.py
test/solution_tests/HLO/: test_hello_solution.py
