[tool.poetry]
name = "accelerate-runner"
version = "0.1.0"
description = "Iwoca Backend Engineering hometask"
authors = ["arifgarayev <garayevarif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
tdl-client-python = "0.27.13"
coverage = "7.5.4"
pytest = "8.2.2"
pytest-cov = "5.0.0"
frozendict = "^2.4.6"

[tool.pytest.ini_options]
pythonpath = [
    "lib"
]

packages = [
    { include = "lib" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

